linked login to login reset

--- a/login/templates/login/layout.html
+++ b/login/templates/login/layout.html
@@ -136,7 +136,7 @@
 
   <div id="copyrights">
     <div class="container">
-      <p><strong>제작자　|</strong>　김 산　박성철　안종훈　이진우　허예은 </p>
+      <p><strong>제작자　|</strong>　김 산　박성철　안종훈　허예은 </p>
       <p>
         &copy; Copyrights <strong>Solid</strong> All Rights Reserved
       </p>
