--- a/login/templates/login/home.html
+++ b/login/templates/login/home.html
@@ -40,10 +40,10 @@
     <div class="row">
       <div class="col-lg-12" id="logo_content">
         <span class="logo_content">
-          <h3 style="margin-bottom:2%;">언제나, 늘, 당신곁에</h3>
+          <h3 style="margin-bottom:2%;font-family: 'Do Hyeon', sans-serif !important;font-weight:bold;">언제나, 늘, 당신곁에</h3>
         </span>
-        <h1 style="margin-top:-0.1%;" class="logo_sentence">제4대 소프트웨어학부 학생회 </h1>
-        <h1 style="margin-top:-0.25%;" class="support_font"><span class="logo">SUPPORT.</span> 입니다.</h1>
+        <h1 style="margin-top:-0.1%;font-family: 'Do Hyeon', sans-serif !important;font-weight:bold;font-size:25px;" class="logo_sentence">제4대 소프트웨어학부 학생회 </h1>
+        <h1 style="margin-top:-0.25%;font-family: 'Do Hyeon', sans-serif !important;font-weight:bold;" class="support_font"><span class="logo">SUPPORT.</span> 입니다.</h1>
       </div>
     </div>
     <div class="row">
